# repochecker

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  setup.py
.github/workflows/: python-app.yml  python-publish.yml
repochecker/: __init__.py
src/gitrepochecker/: __init__.py  git_info.py
