[project]
name = 'gitrepochecker'
version = '0.2.3'
description = 'CLI to check status of git repositories'
readme = 'README.md'
license = { file = 'LICENSE' }
authors = [{ name = 'Oli', email = 'oli@olillin.com' }]
maintainers = [{ name = 'Oli', email = 'oli@olillin.com' }]

classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
]

requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
]

[project.urls]
"Bug Reports" = "https://github.com/olillin/repochecker/issues"
"Source" = "https://github.com/olillin/repochecker"

[project.scripts]
repochecker = 'gitrepochecker:main'

[build-system]
requires = ['uv_build>=0.9.0,<0.10.0']
build-backend = 'uv_build'

